--- a/CGPFE/CGPFE.csproj
+++ b/CGPFE/CGPFE.csproj
@@ -7,9 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="God\" />
-      <Folder Include="Management\" />
-      <Folder Include="Mechanics\" />
+      <Folder Include="Data\Storage\Items\Equipment\" />
     </ItemGroup>
 
 </Project>
