Added all defensive items

--- a/CGPFE/CGPFE.csproj
+++ b/CGPFE/CGPFE.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Data\Storage\Items\Equipment\" />
+      <Folder Include="Data\Storage\Items\Equipment\Offense\" />
     </ItemGroup>
 
 </Project>
