started adding combat table loading and class registration

--- a/CGPFE/CGPFE.csproj
+++ b/CGPFE/CGPFE.csproj
@@ -9,5 +9,11 @@
     <ItemGroup>
       <Folder Include="Data\Models\Item\Equipment\" />
     </ItemGroup>
+    
+    <ItemGroup>
+        <Content Include="Resources\**\*">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 
 </Project>
