--- a/CGPFE/CGPFE.csproj
+++ b/CGPFE/CGPFE.csproj
@@ -8,5 +8,9 @@
 
     <ItemGroup>
       <Folder Include="Data\Models\Item\Equipment\" />
+      <Folder Include="God\Creation\General\Feats\Feats\Combat\" />
+      <Folder Include="God\Creation\General\Feats\Feats\Critical\" />
+      <Folder Include="God\Creation\General\Feats\Feats\ItemCreation\" />
+      <Folder Include="God\Creation\General\Feats\Feats\Metamagic\" />
     </ItemGroup>
 </Project>
