--- a/CGPFE/CGPFE.csproj
+++ b/CGPFE/CGPFE.csproj
@@ -1,9 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+      <TargetFramework>net8.0</TargetFramework>
+      <ImplicitUsings>enable</ImplicitUsings>
+      <PackAsTool>true</PackAsTool>
+      <ToolCommandName>cgpfe</ToolCommandName>
+      <PackageOutputPath>./nupkg</PackageOutputPath>
+      <Nullable>enable</Nullable>
+      <OutputType>Exe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
